# machinic_go_mini

./: .gitignore  README.md  pyproject.toml
src/machinic_go_mini/: __init__.py  cli.py  game.py  mcts.py  network.py  training.py
src/machinic_go_mini/tui/: __init__.py  app.py  board_widget.py  play_view.py  training_view.py
